--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ body {
   max-width: 1408px;
   margin: 0 auto;
   padding: 0 16px;
+  display: block;
+  animation: slide-up 1.2s ease;
+}
+
+@keyframes slide-up {
+  0% {
+      opacity: 0;
+      transform: translateY(50px);
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0);
+  }
 }
 
 .page-header {
@@ -90,7 +103,7 @@ body {
   opacity: 0.5;
 }
 
-.hero-image {
+.name-section {
   position: relative;
   padding-top: 200px;
   height: 798px;
@@ -100,12 +113,12 @@ body {
   background-position-y: 48px;
 }
 
-.hero-image .container {
+.name-section .container {
   display: flex;
   flex-direction: column;
 }
 
-.hero-image::before {
+.name-section::before {
   position: absolute;
   content: "";
   top: 24px;
@@ -116,7 +129,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.hero-image::after {
+.name-section::after {
   position: absolute;
   content: "";
   height: 200px;
@@ -127,27 +140,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   border-top: 2px solid #5053a8;
-}
-
-.heading {
-  z-index: 1;
-  order: 2;
-  margin: 0 0 0 -10px;
-  width: 815px;
-  font-size: 96px;
-  line-height: 112px;
-  font-weight: 500;
-}
-
-.hero-image p {
-  z-index: 1;
-  order: 1;
-  margin: 0;
-  padding: 32px 0;
-  padding-bottom: 16px;
-  font-size: 32px;
-  line-height: 48px;
-  color: #f9dd79;
 }
 
 .intro,
@@ -161,7 +153,7 @@ body {
 .intro {
   padding-top: 160px;
   padding-bottom: 120px;
-  min-height: 828px;
+  min-height: 950px;
 }
 
 .subheading {
@@ -238,7 +230,7 @@ body {
   background-image: url("./img/icon-css.svg");
 }
 
-.skill-js {
+.skill-javascript {
   background-image: url("./img/icon-js.svg");
 }
 
@@ -284,6 +276,7 @@ body {
   position: relative;
   min-height: 256px;
   margin: 0 0 100px;
+  animation: slide-up 2s ease;
 }
 
 .project__left {
