--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   position: relative;
   margin: 0;
-  min-width: 1408px;
   font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   line-height: 32px;
@@ -122,7 +121,7 @@ body {
   position: absolute;
   content: "";
   top: 24px;
-  left: calc(50vw - 50px);
+  left: calc(50vw - 100px);
   width: 800px;
   height: 800px;
   background-image: url("./img/hero-image.svg");
@@ -177,26 +176,6 @@ body {
   color: #f9dd79;
 }
 
-.intro .container {
-  position: relative;
-}
-
-.user-image {
-  position: absolute;
-  margin: 0;
-}
-
-.user-image img {
-  width: 640px;
-  height: 640px;
-  object-fit: cover;
-}
-
-.intro .container div {
-  margin-left: 720px;
-  margin-bottom: 56px;
-}
-
 .intro h3,
 .portfolio h3 {
   margin: 0 0 16px;
@@ -211,8 +190,32 @@ body {
   margin-bottom: 100px;
 }
 
+.intro .container {
+  position: relative;
+}
+
+.user-image {
+  margin: 0;
+  width: 640px;
+  height: 640px;
+}
+
+.user-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.skills-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 .skills {
   margin-bottom: 0;
+  margin-left: 25px;
+  flex-grow: 1;
+  min-height: 675px;
 }
 
 .skills h3 {
@@ -225,7 +228,7 @@ body {
 }
 
 .skills-list dt {
-  margin: 0 0 8px;
+  margin: 0 0 19px;
   padding-left: 46px;
   height: 36px;
   font-size: 24px;
@@ -298,23 +301,12 @@ body {
   min-height: 256px;
   margin: 0 0 100px;
   animation: slide-up 2s ease;
-}
-
-.project__left {
-  padding-left: 528px;
-}
-
-.project__right {
   padding-left: 528px;
 }
 
 .project-image {
   position: absolute;
   margin: 0;
-}
-
-.project-description {
-  max-width: 350px;
 }
 
 .project-image__left-sided {
@@ -333,8 +325,15 @@ body {
   object-fit: cover;
 }
 
-.projects p {
-  margin: 0 0 32px;
+.project-description {
+  max-width: 350px;
+  margin: 0 0 28px;
+}
+
+.project-image img {
+  width: 448px;
+  height: 256px;
+  object-fit: cover;
 }
 
 .button {
@@ -368,4 +367,197 @@ body {
 .page-footer {
   padding: 40px 0;
   background-color: #212349;
+}
+
+@media (max-width: 1400px) {
+  .container {
+    max-width: 1200px;
+  }
+  .name-section::before {
+    right: 0;
+    left: auto;
+  }
+  .projects {
+    display: flex;
+    flex-direction: column;
+  }
+  .project {
+    align-self: center;
+    justify-content: space-between;
+    width: 65%;
+  }
+  .project-description, .portfolio h3 {
+    max-width: 270px;
+  }
+  .project-description {
+    margin-bottom: 28px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 900px;
+  }
+  .user-image {
+    width: 500px;
+    height: 500px;
+  }
+  .skills h3, .level {
+    margin-bottom: 20px;
+  }
+  .skills-list dt {
+    height: 30px;
+  }
+  .project {
+    width: 80%;
+  }
+}
+
+@media (max-width: 999px) {
+  .name-section {
+    padding-top: 50px;
+  }
+  .name-section::before {
+    background-size: contain;
+  }
+  .project-description, .portfolio h3 {
+    max-width: 300px;
+  }
+  .projects p {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 770px) {
+  .container {
+    max-width: 500px;
+  }
+  .name-section {
+    height: 450px;
+  }
+  .name-section::before {
+    width: 300px;
+    height: 300px;
+    top: 0;
+  }
+  .name-section::after {
+    height: 150px;
+  }
+
+  @keyframes grow-up {
+    0% {
+      width: 0;
+      height: 0;
+    }
+    100% {
+      width: 300px;
+      height: 300px;
+    }
+  }
+  .intro {
+    padding-top: 70px;
+    padding-bottom: 10px;
+    min-height: 990px;
+  }
+  .subheading {
+    font-size: 45px;
+    margin-bottom: 40px;
+  }
+  .intro .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .user-image {
+    align-self: center;
+    width: 400px;
+    height: 400px;
+    margin-bottom: 40px;
+  }
+  .skills-wrapper {
+    flex-direction: column;
+    margin-left: 0;
+    margin-bottom: 30px;
+  }
+  .skills {
+    min-height: 490px;
+  }
+  .skills h3 {
+    margin-bottom: 35px;
+  }
+  .portfolio {
+    padding-bottom: 50px;
+  }
+  .project {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+  }
+  .project-image {
+    position: static;
+    margin-bottom: 15px;
+  }
+  .project-image img {
+    width: 100%;
+    height: auto;
+  }
+
+  .project h3, 
+  .project .project-description,
+  .project a {
+    align-self: center;
+    text-align: center;
+  }
+  
+  .project-description, .portfolio h3 {
+    margin: auto;
+    margin-bottom: 16px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 450px) {
+  .container {
+    max-width: 350px;
+  }
+  .name-section {
+    padding-top: 0;
+    height: 400px;
+  }
+  .name-section::before {
+    width: 200px;
+    height: 200px;
+  }
+  @keyframes grow-up {
+    0% {
+      width: 0;
+      height: 0;
+    }
+    100% {
+      width: 200px;
+      height: 200px;
+    }
+  }
+  .name-section::after {
+    height: 100px;
+  }
+  .intro {
+    padding-top: 25px;
+  }
+  .intro p {
+    margin-bottom: 50px;
+  }
+  .subheading {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+  .user-image {
+    width: 300px;
+    height: 300px;
+  }
+  .skills {
+    min-height: 540px;
+  }
+  .skills-list dt {
+    font-size: 20px;
+  }
 }
