--- a/style.css
+++ b/style.css
@@ -15,16 +15,32 @@ body {
   margin: 0 auto;
   padding: 0 16px;
   display: block;
+  -webkit-animation: slide-up 1.2s ease;
   animation: slide-up 1.2s ease;
+}
+
+@-webkit-keyframes slide-up {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 }
 
 @keyframes slide-up {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(50px);
     transform: translateY(50px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -63,6 +79,8 @@ body {
   width: 0;
   height: 2px;
   background-color: #f9dd79;
+  -webkit-transition: width 200ms;
+  -o-transition: width 200ms;
   transition: width 200ms;
 }
 
@@ -113,7 +131,12 @@ body {
 }
 
 .name-section .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -126,7 +149,19 @@ body {
   height: 800px;
   background-image: url("./img/hero-image.svg");
   background-repeat: no-repeat;
+  -webkit-animation: grow-up 1.2s ease;
   animation: grow-up 1.2s ease;
+}
+
+@-webkit-keyframes grow-up {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  100% {
+    width: 800px;
+    height: 800px;
+  }
 }
 
 @keyframes grow-up {
@@ -201,19 +236,26 @@ body {
 }
 
 .user-image img {
+  -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
   height: 100%;
 }
 
 .skills-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .skills {
   margin-bottom: 0;
   margin-left: 25px;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
   min-height: 675px;
 }
@@ -262,6 +304,7 @@ body {
   height: 24px;
   text-align: right;
   background-color: #0b0c23;
+  -webkit-box-shadow: inset 0 0 12px #070716;
   box-shadow: inset 0 0 12px #070716;
   border-radius: 12px;
   overflow: hidden;
@@ -276,12 +319,21 @@ body {
   background-image: url("./img/progress-pattern.svg");
 }
 
-@keyframes progress-rise {
+@-webkit-keyframes progress-rise {
   0% {
-      width: 0;
+    width: 0;
   }
   100% {
-      width: auto;
+    width: auto;
+  }
+}
+
+@keyframes progress-rise {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: auto;
   }
 }
 
@@ -300,6 +352,7 @@ body {
   position: relative;
   min-height: 256px;
   margin: 0 0 100px;
+  -webkit-animation: slide-up 2s ease;
   animation: slide-up 2s ease;
   padding-left: 528px;
 }
@@ -322,6 +375,7 @@ body {
 .project-image img {
   width: 448px;
   height: 256px;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -333,6 +387,7 @@ body {
 .project-image img {
   width: 448px;
   height: 256px;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -348,19 +403,26 @@ body {
   text-transform: uppercase;
   color: #0b0c23;
   background-color: #f9dd79;
+  -webkit-box-shadow: 0 4px 16px rgba(249, 221, 121, 0.4);
   box-shadow: 0 4px 16px rgba(249, 221, 121, 0.4);
   border-radius: 24px;
+  -webkit-transition: background-color 100ms, -webkit-box-shadow 100ms;
+  transition: background-color 100ms, -webkit-box-shadow 100ms;
+  -o-transition: background-color 100ms, box-shadow 100ms;
   transition: background-color 100ms, box-shadow 100ms;
+  transition: background-color 100ms, box-shadow 100ms, -webkit-box-shadow 100ms;
 }
 
 .button:focus,
 .button:hover {
   background-color: #f9e7a8;
+  -webkit-box-shadow: 0 4px 32px rgba(249, 221, 121, 0.6);
   box-shadow: 0 4px 32px rgba(249, 221, 121, 0.6);
 }
 
 .button:active {
   background-color: #b69e4b;
+  -webkit-box-shadow: none;
   box-shadow: none;
 }
 
@@ -378,11 +440,20 @@ body {
     left: auto;
   }
   .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .project {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     width: 65%;
   }
@@ -444,6 +515,17 @@ body {
     height: 150px;
   }
 
+  @-webkit-keyframes grow-up {
+    0% {
+      width: 0;
+      height: 0;
+    }
+    100% {
+      width: 300px;
+      height: 300px;
+    }
+  }
+
   @keyframes grow-up {
     0% {
       width: 0;
@@ -464,16 +546,26 @@ body {
     margin-bottom: 40px;
   }
   .intro .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .user-image {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
     width: 400px;
     height: 400px;
     margin-bottom: 40px;
   }
   .skills-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     margin-left: 0;
     margin-bottom: 30px;
@@ -488,7 +580,12 @@ body {
     padding-bottom: 50px;
   }
   .project {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding-left: 0;
   }
@@ -504,6 +601,8 @@ body {
   .project h3, 
   .project .project-description,
   .project a {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
     align-self: center;
     text-align: center;
   }
@@ -526,6 +625,16 @@ body {
   .name-section::before {
     width: 200px;
     height: 200px;
+  }
+  @-webkit-keyframes grow-up {
+    0% {
+      width: 0;
+      height: 0;
+    }
+    100% {
+      width: 200px;
+      height: 200px;
+    }
   }
   @keyframes grow-up {
     0% {
