--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   line-height: 32px;
   color: #f2f2f2;
   background-color: #141530;
-  background-image: url("./img/pattern-lines-hero.svg");
+  background-image: url("./icons/pattern-lines-hero.svg");
   background-position: center;
 }
 
@@ -17,6 +17,13 @@ body {
   display: block;
   -webkit-animation: slide-up 1.2s ease;
   animation: slide-up 1.2s ease;
+}
+
+.page-header .container, 
+.page-footer .container {
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
 }
 
 @-webkit-keyframes slide-up {
@@ -47,11 +54,11 @@ body {
 
 .page-header {
   margin: 0;
-  padding: 40px 0;
+  padding: 0;
+  padding-top: 40px;
 }
 
-.page-header a,
-.page-footer a {
+.contact-link {
   position: relative;
   margin-right: 64px;
   padding-bottom: 10px;
@@ -63,15 +70,12 @@ body {
   color: inherit;
 }
 
-.page-header a:focus,
-.page-header a:hover,
-.page-footer a:focus,
-.page-footer a:hover {
+.contact-link:focus,
+.contact-link:hover {
   color: #f9dd79;
 }
 
-.page-header a::after,
-.page-footer a::after {
+.contact-link::after {
   position: absolute;
   content: "";
   bottom: 0;
@@ -84,39 +88,41 @@ body {
   transition: width 200ms;
 }
 
-.page-header a:hover::after,
-.page-footer a:hover::after {
+.contact-link:hover::after{
   width: 100%;
 }
 
-.header-email,
-.footer-email {
+.email-link {
   padding-left: 28px;
-  background-image: url("./img/icon-email.svg");
+  background-image: url("./icons/icon-email.svg");
 }
 
-.header-email:focus,
-.header-email:hover,
-.footer-email:focus,
-.footer-email:hover {
-  background-image: url("./img/icon-email-alt.svg");
+.email-link:focus,
+.email-link:hover {
+  background-image: url("./icons/icon-email-alt.svg");
 }
 
-.header-phone,
-.footer-phone {
+.phone-link {
   padding-left: 21px;
-  background-image: url("./img/icon-phone.svg");
+  background-image: url("./icons/icon-phone.svg");
 }
 
-.header-phone:focus,
-.header-phone:hover,
-.footer-phone:focus,
-.footer-phone:hover {
-  background-image: url("./img/icon-phone-alt.svg");
+.phone-link:focus,
+.phone-link:hover {
+  background-image: url("./icons/icon-phone-alt.svg");
 }
 
-.page-header a:active,
-.page-footer a:active {
+.cv-link {
+  background-image: url("./icons/cv.svg");
+  padding-left: 25px;
+}
+
+.cv-link:hover, 
+.cv-link:focus {
+  background-image: url("./icons/cv-alt.svg");
+}
+
+.contact-link:active {
   opacity: 0.5;
 }
 
@@ -124,7 +130,7 @@ body {
   position: relative;
   padding-top: 200px;
   height: 798px;
-  background-image: url("./img/bg-html.png");
+  background-image: url("./icons/bg-html.png");
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: 48px;
@@ -147,7 +153,7 @@ body {
   left: calc(50vw - 100px);
   width: 800px;
   height: 800px;
-  background-image: url("./img/hero-image.svg");
+  background-image: url("./icons/hero-image.svg");
   background-repeat: no-repeat;
   -webkit-animation: grow-up 1.2s ease;
   animation: grow-up 1.2s ease;
@@ -182,7 +188,7 @@ body {
   width: 100%;
   bottom: 0;
   background-color: #0b0c23;
-  background-image: url("./img/bg-tags.svg");
+  background-image: url("./icons/bg-tags.svg");
   background-position: center;
   background-repeat: no-repeat;
   border-top: 2px solid #5053a8;
@@ -191,7 +197,7 @@ body {
 .intro,
 .portfolio {
   background-color: #141530;
-  background-image: url("./img/pattern-lines.svg");
+  background-image: url("./icons/pattern-lines.svg");
   background-repeat: repeat-y;
   background-position-x: center;
 }
@@ -280,23 +286,23 @@ body {
 }
 
 .skill-html {
-  background-image: url("./img/icon-html.svg");
+  background-image: url("./icons/icon-html.svg");
 }
 
 .skill-css {
-  background-image: url("./img/icon-css.svg");
+  background-image: url("./icons/icon-css.svg");
 }
 
 .skill-javascript {
-  background-image: url("./img/icon-js.svg");
+  background-image: url("./icons/icon-js.svg");
 }
 
 .skill-react {
-  background-image: url("./img/icon-react.svg");
+  background-image: url("./icons/icon-react.svg");
 }
 
 .skill-node {
-  background-image: url("./img/icon-node2.svg");
+  background-image: url("./icons/icon-node2.svg");
 }
 
 .level {
@@ -316,7 +322,7 @@ body {
   letter-spacing: 1px;
   line-height: 26px;
   background-color: #5053a8;
-  background-image: url("./img/progress-pattern.svg");
+  background-image: url("./icons/progress-pattern.svg");
 }
 
 @-webkit-keyframes progress-rise {
@@ -503,8 +509,26 @@ body {
   .container {
     max-width: 500px;
   }
+  .page-header {
+    padding-top: 15px;
+  }
+  .page-header .container,
+  .page-footer .container {
+    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+  }
+  .contact-link {
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+    font-size: 14px;
+    padding-bottom: 4px;
+  }
   .name-section {
     height: 450px;
+    padding-top: 30px;
+    background: none;
   }
   .name-section::before {
     width: 300px;
@@ -571,7 +595,7 @@ body {
     margin-bottom: 30px;
   }
   .skills {
-    min-height: 490px;
+    min-height: 540px;
   }
   .skills h3 {
     margin-bottom: 35px;
@@ -618,8 +642,12 @@ body {
   .container {
     max-width: 350px;
   }
+  .contact-link {
+    font-size: 12px;
+    padding-bottom: 0;
+  }
   .name-section {
-    padding-top: 0;
+    padding-top: 20px;
     height: 400px;
   }
   .name-section::before {
