node skill replaced with typescript

--- a/style.css
+++ b/style.css
@@ -301,8 +301,8 @@ body {
   background-image: url("./icons/icon-react.svg");
 }
 
-.skill-node {
-  background-image: url("./icons/icon-node2.svg");
+.skill-typescript {
+  background-image: url("./icons/icon-ts.svg");
 }
 
 .level {
