--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+:root {
+  font-size: 16px;
+}
+
 body {
   position: relative;
   margin: 0;
   font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 32px;
+  line-height: 2;
   color: #f2f2f2;
   background-color: #141530;
   background-image: url("./icons/pattern-lines-hero.svg");
@@ -55,14 +58,14 @@ body {
 .page-header {
   margin: 0;
   padding: 0;
-  padding-top: 40px;
+  padding-top: 2.5em;
 }
 
 .contact-link {
   position: relative;
-  margin-right: 64px;
-  padding-bottom: 10px;
-  padding-top: 9px;
+  margin-right: 4em;
+  padding-bottom: 0.6em;
+  padding-top: 0.5em;
   font-weight: 500;
   text-decoration: none;
   background-repeat: no-repeat;
@@ -128,7 +131,7 @@ body {
 
 .name-section {
   position: relative;
-  padding-top: 200px;
+  padding-top: 12.5em;
   height: 798px;
   background-image: url("./icons/bg-html.png");
   background-repeat: no-repeat;
@@ -203,16 +206,16 @@ body {
 }
 
 .intro {
-  padding-top: 160px;
-  padding-bottom: 120px;
+  padding-top: 10em;
+  padding-bottom: 7.5em;
   min-height: 990px;
 }
 
 .subheading {
-  margin: 0 0 100px;
+  margin: 0 0 1.4em;
   text-align: center;
-  font-size: 72px;
-  line-height: 88px;
+  font-size: 4.5rem;
+  line-height: 1.2;
   font-weight: 500;
   color: #f9dd79;
 }
@@ -220,15 +223,15 @@ body {
 .intro h3,
 .portfolio h3 {
   margin: 0 0 16px;
-  font-size: 32px;
-  line-height: 40px;
+  font-size: 2rem;
+  line-height: 1.2;
   font-weight: 500;
 }
 
 .intro p {
   margin: 0;
   z-index: 2;
-  margin-bottom: 100px;
+  margin-bottom: 6em;
 }
 
 .intro .container {
@@ -267,7 +270,7 @@ body {
 }
 
 .skills h3 {
-  margin-bottom: 40px;
+  margin-bottom: 1.5em;
 }
 
 .skills-list {
@@ -276,10 +279,10 @@ body {
 }
 
 .skills-list dt {
-  margin: 0 0 19px;
-  padding-left: 46px;
+  margin: 0 0 0.8em;
+  padding-left: 2em;
   height: 36px;
-  font-size: 24px;
+  font-size: 1.5rem;
   letter-spacing: 1px;
   background-repeat: no-repeat;
   background-position: left;
@@ -306,7 +309,7 @@ body {
 }
 
 .level {
-  margin: 0 0 40px;
+  margin: 0 0 2.5em;
   height: 24px;
   text-align: right;
   background-color: #0b0c23;
@@ -345,7 +348,7 @@ body {
 
 .portfolio {
   margin: 0;
-  padding-bottom: 160px;
+  padding-bottom: 10em;
 }
 
 .projects {
@@ -357,10 +360,10 @@ body {
 .project {
   position: relative;
   min-height: 256px;
-  margin: 0 0 100px;
+  margin: 0 0 6.25em;
   -webkit-animation: slide-up 2s ease;
   animation: slide-up 2s ease;
-  padding-left: 528px;
+  padding-left: 33em;
 }
 
 .project-image {
@@ -402,7 +405,7 @@ body {
   padding: 8px 24px;
   display: inline-block;
   vertical-align: baseline;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 500;
   letter-spacing: 1px;
   text-decoration: none;
@@ -433,7 +436,7 @@ body {
 }
 
 .page-footer {
-  padding: 40px 0;
+  padding: 2.5em 0;
   background-color: #212349;
 }
 
@@ -466,9 +469,6 @@ body {
   .project-description, .portfolio h3 {
     max-width: 270px;
   }
-  .project-description {
-    margin-bottom: 28px;
-  }
 }
 
 @media (max-width: 1200px) {
@@ -480,7 +480,7 @@ body {
     height: 500px;
   }
   .skills h3, .level {
-    margin-bottom: 20px;
+    margin-bottom: 1.25em;
   }
   .skills-list dt {
     height: 30px;
@@ -492,7 +492,7 @@ body {
 
 @media (max-width: 999px) {
   .name-section {
-    padding-top: 50px;
+    padding-top: 3.1em;
   }
   .name-section::before {
     background-size: contain;
@@ -501,16 +501,19 @@ body {
     max-width: 300px;
   }
   .projects p {
-    margin-bottom: 15px;
+    margin-bottom: 0.93em;
   }
 }
 
 @media (max-width: 770px) {
+  :root {
+    font-size: 14px;
+  }
   .container {
     max-width: 500px;
   }
   .page-header {
-    padding-top: 15px;
+    padding-top: 1.1em;
   }
   .page-header .container,
   .page-footer .container {
@@ -522,12 +525,10 @@ body {
   .contact-link {
     -ms-flex-item-align: start;
     align-self: flex-start;
-    font-size: 14px;
     padding-bottom: 4px;
   }
   .name-section {
     height: 450px;
-    padding-top: 30px;
     background: none;
   }
   .name-section::before {
@@ -561,13 +562,12 @@ body {
     }
   }
   .intro {
-    padding-top: 70px;
-    padding-bottom: 10px;
+    padding-top: 5em;
     min-height: 990px;
+    padding-bottom: 2.2em;
   }
   .subheading {
-    font-size: 45px;
-    margin-bottom: 40px;
+    font-size: 3em;
   }
   .intro .container {
     display: -webkit-box;
@@ -584,7 +584,7 @@ body {
     align-self: center;
     width: 400px;
     height: 400px;
-    margin-bottom: 40px;
+    margin-bottom: 2.8em;
   }
   .skills-wrapper {
     -webkit-box-orient: vertical;
@@ -592,16 +592,9 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     margin-left: 0;
-    margin-bottom: 30px;
   }
   .skills {
     min-height: 540px;
-  }
-  .skills h3 {
-    margin-bottom: 35px;
-  }
-  .portfolio {
-    padding-bottom: 50px;
   }
   .project {
     display: -webkit-box;
@@ -615,11 +608,15 @@ body {
   }
   .project-image {
     position: static;
-    margin-bottom: 15px;
+    margin-bottom: 1.1em;
   }
   .project-image img {
     width: 100%;
     height: auto;
+  }
+
+  .project a {
+    margin-top: 1em;
   }
 
   .project h3, 
@@ -631,9 +628,9 @@ body {
     text-align: center;
   }
   
-  .project-description, .portfolio h3 {
+  .portfolio h3 {
     margin: auto;
-    margin-bottom: 16px;
+    margin-bottom: 0.6em;
     width: 100%;
   }
 }
@@ -642,12 +639,7 @@ body {
   .container {
     max-width: 350px;
   }
-  .contact-link {
-    font-size: 12px;
-    padding-bottom: 0;
-  }
   .name-section {
-    padding-top: 20px;
     height: 400px;
   }
   .name-section::before {
@@ -677,24 +669,11 @@ body {
   .name-section::after {
     height: 100px;
   }
-  .intro {
-    padding-top: 25px;
-  }
-  .intro p {
-    margin-bottom: 50px;
-  }
-  .subheading {
-    font-size: 30px;
-    margin-bottom: 30px;
-  }
   .user-image {
     width: 300px;
     height: 300px;
   }
   .skills {
     min-height: 540px;
-  }
-  .skills-list dt {
-    font-size: 20px;
   }
 }
